# croudtech-python-bootstrap-app

./: .gitignore  .pre-commit-config.yaml  DockerfileEcs  Makefile  Pipfile  azure-pipelines.yml  bump_version.sh  check_version.sh  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
cdk/: package-lock.json  package.json
croudtech_bootstrap_app/: __init__.py  bootstrap.py
croudtech_bootstrap_app/tests/test_values/TestEnv1/: TestApp.secret.yaml  TestApp.yaml  common.secret.yaml  common.yaml
croudtech_bootstrap_app/tests/test_values/TestEnv2/: TestApp.secret.yaml  TestApp.yaml  common.secret.yaml  common.yaml
