# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = croudtech-bootstrap
description = Applicaton config via AWS S3 and AWS Secrets Manager
author = Jim Robinson
author-email = jscrobinson@gmail.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = http://github.com/CroudTech/croudtech-python-bootstrap-app

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Intended Audience :: Developers

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =croudtech_bootstrap_app

[options.packages.find]
where = croudtech_bootstrap_app
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install croudtech-python-aws-app-config[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = croudtech_python_aws_app_config.module:function
# For example:
# console_scripts =
#     fibonacci = croudtech_python_aws_app_config.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov croudtech_bootstrap_app --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = src/croudtech_bootstrap_app/tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
