# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = croudtech-bootstrap
description = Applicaton config via AWS S3 and AWS Secrets Manager
author = Jim Robinson
author_email = jscrobinson@gmail.com
license = mit
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = http://github.com/CroudTech/croudtech-python-bootstrap-app

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Intended Audience :: Developers

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =./

[options.packages.find]
where = ./
exclude =
    tests

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts = 
    croudtech-bootstrap=croudtech_bootstrap_app.cli:cli
        
[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --verbose
    --no-cov
    --no-cov-on-fail
    -n auto
norecursedirs =
    dist
    build
    .tox
    .eggs
testpaths = croudtech_bootstrap_app/
python_files = test_*.py tests/*.py tests.py

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
ignore = E203, E501, W503
max-line-length = 88
select = C,E,F,W,B,B950
per-file-ignores = __init__.py:F401

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[coverage:run]
branch = True
source = ./croudtech_bootstrap_app

[isort]
force_grid_wrap = 0
include_trailing_comma = True
known_django = django
line_length = 88
multi_line_output = 3
sections = FUTURE, STDLIB, DJANGO, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
use_parentheses = True
